2024-08-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-run-command-*): Define functions
	for ebuild subcommands.
	(ebuild-mode-prefix-map): New variable, keymap for ebuild-mode
	commands. Define C-c C-e <letter> keys for the most common ebuild
	subcommands.
	(ebuild-mode-map): Use the new keymap.
	(ebuild-mode-menu): Use ebuild-run-command-* functions in menu
	items; for the previously used expressions, easy-menu-define would
	create internal functions anyway. Don't sort ebuild-commands-list
	because it already is in alphabetical order.
	* ebuild-mode.texi (ebuild-mode): Update.

	* ebuild-mode.el (ebuild-commands-list): Add "instprep" and
	"nofetch" commands.

2024-08-15  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.73 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* keyword-generation.sh (OBSOLETE): Update.

	* Makefile (DISTFILES): Add Makefile.

2024-08-10  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-find-build-log): New function.
	(ebuild-mode-map, ebuild-mode-menu): Keybinding and menu entry.
	* ebuild-mode.texi (ebuild-mode): Document it.

	* test/ebuild-mode-tests.el
	(ebuild-mode-test-run-with-fixed-time): New macro.
	(ebuild-mode-test-update-copyright)
	(ebuild-mode-test-insert-tag-line): Use it.
	* test/glep-mode-tests.el
	(glep-mode-test-run-with-fixed-time): New macro.
	(glep-mode-test-update-last-modified): Use it.

	* ebuild-mode.el (find-file-hook): Use 'if' because 'static-if'
	breaks autoloads.

2024-08-08  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-tag-line): Don't insert
	another space when comment-start ends with a space or tab.

	* test/ebuild-mode-tests.el:
	* test/glep-mode-tests.el: New files, introducing tests.
	* ebuild-mode.el (ebuild-mode-collect-and-split): Make it visible
	at load time for tests.
	* Makefile (TESTS, BYTECOMPFLAGS): New variables.
	(check): New target.

2024-08-07  Ulrich Müller  <ulm@gentoo.org>
